Refactoring table header labels

--- a/src/app/order/components/pnl/pnl.component.html
+++ b/src/app/order/components/pnl/pnl.component.html
@@ -48,9 +48,9 @@
                 <th scope="col">%</th>
                 <th scope="col">Return</th>
                 <th scope="col">Total Loss</th>
-                <th scope="col" *ngIf="order.showChangePerUnit">Down / Unit</th>
+                <th scope="col" *ngIf="order.showChangePerUnit">Down To / Unit</th>
                 <th scope="col">POL / Unit</th>
-                <th scope="col" *ngIf="order.showChangePerUnit">Up / Unit</th>
+                <th scope="col" *ngIf="order.showChangePerUnit">Up To / Unit</th>
                 <th scope="col">Total Profit</th>
                 <th scope="col">Return</th>
                 <th scope="col">%</th>
