Form label refactoring

--- a/src/app/order/components/create-order/create-order.component.html
+++ b/src/app/order/components/create-order/create-order.component.html
@@ -11,7 +11,7 @@
                     <input [(ngModel)]="order.id" type="text" name="id" class="form-control" id="id" aria-describedby="idHelp" placeholder="Enter ID">
                     <br>
       
-                    <label for="name">Order Name</label>
+                    <label for="name">Instrument Name</label>
                     <input [(ngModel)]="order.name" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter the Order name">
                     <small id="nameHelp" class="form-text text-muted">Please enter the Order name</small>
                     <br>
