--- a/src/app/order/components/create-order/create-order.component.html
+++ b/src/app/order/components/create-order/create-order.component.html
@@ -63,6 +63,7 @@
                   </div>
                 </form>
                 <button class="btn btn-primary" (click)="createOrUpdateOrder()">{{updateOrder ? 'Update' : 'Create'}} Order</button>
+                <button class="btn btn-default" (click)="cancelAction()">Cancel</button>
             </div>
           </div>
     </div>
