--- a/src/app/order/components/create-order/create-order.component.html
+++ b/src/app/order/components/create-order/create-order.component.html
@@ -2,88 +2,85 @@
     <div class="card-header">
         {{updateOrder ? 'Update' : 'Create'}} Order
     </div>
-    <div class="card-body" *ngIf="order">
+    <div class="card-body">
         <div class="row">
             <div class="col-sm-8 offset-sm-2">
-                <form #createOrderForm="ngForm" (ngSubmit)="onSubmit(createOrderForm)">
-                  <div class="form-group">
-                    <label for="id">ID</label>
-                    <input [(ngModel)]="order.id" type="text" name="id" class="form-control" id="id" aria-describedby="idHelp" placeholder="Enter ID">
-                    <br>
-      
-                    <label for="name">Instrument Name</label>
-                    <input [(ngModel)]="order.name" type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter the Order name">
-                    <small id="nameHelp" class="form-text text-muted">Please enter the Order name</small>
-                    <br>
-      
-                    <label for="price">Avg Price</label>
-                    <input [ngModel]="order.price" type="number" name="price" class="form-control" id="price" aria-describedby="priceHelp" placeholder="Enter the Order price">
-                    <br>
-      
-                    <label for="quantity">Total Quantity</label>
-                    <input [ngModel]="order.quantity" type="number" name="quantity" class="form-control" id="quantity" aria-describedby="quantityHelp" placeholder="Enter the Order quantity">
+                <form *ngIf="orderForm" [formGroup]="orderForm" (ngSubmit)="onSubmit()" class="form-group">
+                  <label>ID</label>
+                  <input type="text" class="form-control" formControlName="id" aria-describedby="idHelp" placeholder="Enter ID">
+                  <br>
 
-                    <hr>
+                  <label>Name</label>
+                  <input type="text" class="form-control" formControlName="name" aria-describedby="nameHelp" placeholder="Enter Name">
+                  <br>
 
-                    <div class="row" *ngFor="let pqPair of order.priceQuantityPairs; let i=index;" ngModelGroup="priceQuantityPairs">
-                        <div class="col-sm-4">
-                          <input [ngModel]="pqPair.price" (ngModelChange)="pqPairPriceChange()" type="number" name="price_{{pqPair.id}}" class="form-control" placeholder="Enter the Order price">
-                          <small class="form-text text-muted">Please enter the Order price</small>
-                          <br>
-                        </div>
+                  <label>Price</label>
+                  <input type="number" class="form-control" formControlName="price" [readonly]="true" aria-describedby="priceHelp">
+                  <br>
 
-                        <div class="col-sm-4">
-                          <input [ngModel]="pqPair.quantity" (ngModelChange)="pqPairQtyChange()" type="number" name="quantity_{{pqPair.id}}" class="form-control" placeholder="Enter the Order quantity">
-                          <small class="form-text text-muted">Please enter the Order quantity</small>
-                        </div>
+                  <label>Quantity</label>
+                  <input type="number" class="form-control" formControlName="quantity" [readonly]="true" aria-describedby="quantityHelp">
+                  <br>
+                  <hr>
 
-                        <div class="col-sm-2">
-                          <button class="btn btn-primary float-right" (click)="removePriceQuantityPair(pqPair.id)">-</button>
-                        </div>
-                        <div class="col-sm-2">
-                          <button class="btn btn-primary" (click)="addPriceQuantityPair()">+</button>
-                        </div>
+                  <ng-container *ngFor="let pqFormGroup of getControls(); let i = index">
+                    <div class="row" [formGroup]="pqFormGroup">
+                      <div class="col-sm-4">
+                        <input type="number" class="form-control" formControlName="price" (keyup)="reconcileAveragePrice()">
+                        <small class="form-text text-muted">Please enter the Order price</small>
+                      </div>
+
+                      <div class="col-sm-4">
+                        <input type="number" class="form-control" formControlName="quantity" (keyup)="reconcileAveragePrice()">
+                        <small class="form-text text-muted">Please enter the Order quantity</small>
+                      </div>
+
+                      <div class="col-sm-2">
+                        <button class="btn btn-primary float-right" (click)="removePQPair(i)">-</button>
+                      </div>
+                      <div class="col-sm-2">
+                        <button class="btn btn-primary" (click)="addPQPair($event, null)">+</button>
+                      </div>
                     </div>
+                    <br>
+                  </ng-container>
 
-                    <div (click)="showAdditionalDetailsForm = !showAdditionalDetailsForm" class="additional-details">
-                      <p>
-                      <span *ngIf="!showAdditionalDetailsForm">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
-                          <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5V6H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V7H6a.5.5 0 0 1 0-1h1.5V4.5A.5.5 0 0 1 8 4z"/>
-                        </svg>
-                      </span>
-                      <span *ngIf="showAdditionalDetailsForm">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
-                          <path fill-rule="evenodd" d="M5.5 6.5A.5.5 0 0 1 6 6h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"/>
-                        </svg>
-                      </span>
-                      Additional Details</p>
-                    </div>
-
-                    <div *ngIf="showAdditionalDetailsForm">
-                      <label for="rangeStart">Range Start</label>
-                      <input [(ngModel)]="order.rangeStart" type="number" name="rangeStart" class="form-control" id="rangeStart" aria-describedby="rangeStartHelp" placeholder="Enter Range Start value">
-                      <br>
-        
-                      <label for="rangeEnd">Range End</label>
-                      <input [(ngModel)]="order.rangeEnd" type="number" name="rangeEnd" class="form-control" id="rangeEnd" aria-describedby="rangeEndHelp" placeholder="Enter Range Start value">
-                      <br>
-        
-                      <label for="interval">Interval</label>
-                      <input [(ngModel)]="order.interval" type="number" name="interval" class="form-control" id="interval" aria-describedby="intervalHelp" placeholder="Enter Range Start value">
-                      <br>
-                    </div>
+                  <div (click)="showAdditionalDetailsForm = !showAdditionalDetailsForm" class="additional-details">
+                    <p>
+                    <span *ngIf="!showAdditionalDetailsForm">
+                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+                        <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5V6H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V7H6a.5.5 0 0 1 0-1h1.5V4.5A.5.5 0 0 1 8 4z"/>
+                      </svg>
+                    </span>
+                    <span *ngIf="showAdditionalDetailsForm">
+                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-dash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+                        <path fill-rule="evenodd" d="M5.5 6.5A.5.5 0 0 1 6 6h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"/>
+                      </svg>
+                    </span>
+                    Additional Details</p>
                   </div>
 
-                  <!-- <button class="btn btn-primary" (click)="createOrUpdateOrder()">{{updateOrder ? 'Update' : 'Create'}} Order</button> -->
+                  <div *ngIf="showAdditionalDetailsForm">
+                    <label>Range Start</label>
+                    <input type="number" class="form-control" formControlName="rangeStart" aria-describedby="rangeStartHelp">
+                    <br>
+      
+                    <label>Range End</label>
+                    <input type="number" class="form-control" formControlName="rangeEnd" aria-describedby="rangeEndHelp">
+                    <br>
+      
+                    <label>Interval</label>
+                    <input type="number" class="form-control" formControlName="interval" aria-describedby="intervalHelp">
+                    <br>
+                  </div>
                   <button class="btn btn-primary" type="submit">{{updateOrder ? 'Update' : 'Create'}} Order</button>
                   &nbsp;&nbsp;
                   <button class="btn btn-default" (click)="cancelAction()">Cancel</button>
                 </form>
 
-                <pre>{{createOrderForm.value | json}}</pre>
+                <!-- <pre>{{orderForm.value | json}}</pre> -->
             </div>
           </div>
     </div>
