--- a/src/app/order/components/create-order/create-order.component.html
+++ b/src/app/order/components/create-order/create-order.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-sm-8 offset-sm-2">
-                <form *ngIf="orderForm" [formGroup]="orderForm" (ngSubmit)="onSubmit()" class="form-group">
+                <form *ngIf="orderForm" [formGroup]="orderForm" (ngSubmit)="createOrUpdateOrder()" class="form-group">
                   <label>ID</label>
                   <input type="text" class="form-control" formControlName="id" aria-describedby="idHelp" placeholder="Enter ID">
                   <br>
