Charts for Option Chain Data

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,9 @@
         <li>
           <a class="nav-link" routerLink="/order-form" routerLinkActive="active">Create</a>
         </li>
+        <li>
+          <a class="nav-link" routerLink="/oi-chart" routerLinkActive="active">OI Chart</a>
+        </li>
       </ul>
     </div>
   </nav>
