--- a/src/app/oi-chart/oi-chart.component.html
+++ b/src/app/oi-chart/oi-chart.component.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-2">
         <label for="optionIndices">Index:</label>
         <select name="optionIndices" id="optionIndices" (ngModelChange)="onOptionIndexChange($event)" [ngModel]="selectedOptionIndex">
             <option [ngValue]="optionIndex" *ngFor="let optionIndex of optionIndices">{{optionIndex.symbol}}</option>
         </select>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-2">
         <label for="options">Option:</label>
         <select name="options" id="options" (ngModelChange)="onOptionChange($event)" [ngModel]="selectedOption">
             <option [ngValue]="option" *ngFor="let option of options">{{option.strikePrice}} {{option.type}}</option>
@@ -23,7 +23,13 @@
     <div class="col-sm-6">
         <label *ngFor="let option of selectedOptions">{{option.strikePrice}} {{option.type}} <span style="background-color: gray;" (click)="removeSelectedOption(option)">X</span></label>
     </div>
+
+    <div class="col-sm-2">
+        <a href="#" (click)="downloadCanvas($event)" class="btn btn-primary">Download</a>
+    </div>
 </div>
+
+
 
 <!-- <div class="row">
     <div style="display: block;">
