--- a/src/app/oi-chart/components/oi-chart/oi-chart.component.html
+++ b/src/app/oi-chart/components/oi-chart/oi-chart.component.html
@@ -1,3 +1,6 @@
+<p>oi-chart works!</p>
+
+
 <div class="row" style="margin-bottom: 10px;">
     <div class="col-sm-4">
         <label for="optionIndices">Index:</label>&nbsp;
