--- a/src/app/oi-chart/components/oi-chart-container/oi-chart-container.component.html
+++ b/src/app/oi-chart/components/oi-chart-container/oi-chart-container.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="loadCharts">
-    <oi-chart *ngFor="let x of [1,2]" [optionIndices]="optionIndices" [indexToStrikePricesMap]="indexToStrikePricesMap"></oi-chart>
+    <oi-chart *ngFor="let x of [1,2]"></oi-chart>
 </ng-container>
