--- a/src/app/oi-chart/components/oi-chart-container/oi-chart-container.component.html
+++ b/src/app/oi-chart/components/oi-chart-container/oi-chart-container.component.html
@@ -1,3 +1,6 @@
 <ng-container *ngIf="loadCharts">
-    <oi-chart *ngFor="let x of [1,2]"></oi-chart>
+    <oi-chart *ngFor="let chartComp of chartComponentsArray" 
+        [selectedOptionIndex]="chartComp.index" 
+        [selectedStrikePrice]="chartComp.strikePrice">
+    </oi-chart>
 </ng-container>
