--- a/src/app/oi-chart/components/oi-chart/oi-chart.component.html
+++ b/src/app/oi-chart/components/oi-chart/oi-chart.component.html
@@ -14,7 +14,7 @@
         <p *ngIf="strikePrices.length===0">No Strike Prices present for selected Index</p>
     </div>
     <div class="col-sm-4">
-        <a href="#" (click)="downloadCanvas($event)" class="float-right">
+        <a href="#" (click)="downloadCanvas($event)" class="float-right" *ngIf="showDownloadButton">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                 <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                 <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
@@ -31,15 +31,28 @@
 </div>
 
 <div class="row">
-    <canvas baseChart width="400" height="400" #linechart="base-chart"
-        [datasets]="optionChainData"
-        [labels]="oiChartLabels"
-        [options]="lineChartOptions"
-        [colors]="lineChartColors"
-        [legend]="lineChartLegend"
-        [chartType]="lineChartType"
-        [plugins]="lineChartPlugins">
-    </canvas>
+    <div class="col-sm-6">
+        <canvas baseChart width="400" height="400" #oiChart="base-chart"
+            [datasets]="oiData"
+            [labels]="oiChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            [plugins]="lineChartPlugins">
+        </canvas>
+    </div>
+    <div class="col-sm-6">
+        <canvas baseChart width="400" height="400" #changeInOIChart="base-chart"
+            [datasets]="changeInOIData"
+            [labels]="oiChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            [plugins]="lineChartPlugins">
+        </canvas>
+    </div>
 </div>
 
 <div class="row"><hr></div>
